Bug 1300025. Use embedded bitmaps in CJK fonts with skia on Windows. r=lsalzman